fix(spacing) replace legacy vanilla spacing units with current ones

--- a/src/sass/_empty_state.scss
+++ b/src/sass/_empty_state.scss
@@ -2,10 +2,10 @@
   margin-top: min(5vh, $spv--strip-regular);
 
   .empty-state-icon {
-    height: $sp-xx-large;
+    height: 2.5rem;
     margin-bottom: $spv--large;
     margin-top: $spv--x-large;
-    width: $sp-xx-large;
+    width: 2.5rem;
   }
 
   h4 {
