--- a/src/sass/_pattern_navigation.scss
+++ b/src/sass/_pattern_navigation.scss
@@ -99,7 +99,7 @@
 .sidenav-toggle-wrapper {
   background: $colors--dark-theme--background-default;
   bottom: 0;
-  padding: $spv--small $sph--x-large $sp-medium $sp-medium;
+  padding: $spv--small $sph--x-large $spv--large $sph--large;
   position: sticky;
   text-align: right;
 
